--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,7 +21,7 @@
     <li class="active"><%= link_to "My Post",posts_path%></li>
     <li><%= link_to "My Order/Received",order_receives_path%></li>
     <li><%= link_to "My Booking", bookings_path%></li>
-    <li><%= link_to "Payment", nil%></li>
+    <li><%= link_to "Payment", payments_path%></li>
     <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil %></li>
   </ul>
   <div class="right-side">
