--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -130,7 +130,7 @@
                             <% end %>
 
                           </li>
-                          
+                          <%unless current_user.admin?%>
                           <% if @booking.dropoff_date >= Date.today + 1 %>
                             <%= link_to "Confirm drop-off ", drop_off_bookings_path(:booking_id => @booking.id ), :remote=>true, :class=>"cdo" %> 
                           <% end %>
@@ -139,7 +139,7 @@
                           <% if @booking.dropoff_date >= Date.today %>
                             <%= link_to "Cancel Booking", cancel_popup_bookings_path(:drop_off_date =>@booking.dropoff_date,:id =>@booking.id), :class=>"cb", :remote=> true %>
                           <% end %>
-                            
+                          <%end%>
 
                           </div>
                     </div> 
