--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -65,21 +65,23 @@
                      <div class="pickup4">
                
                         <p style="margin: -25px 0px 0px; font-size: 16px; color: rgb(123, 123, 123); margin-top:155px;">Send notifications to:</p><br/>
-                     <div class="checkbox">
+                       <div class="checkbox">
 
-                      <% if current_user.email.present? %>
-                        <%= f.check_box :notification_for_email %>                  
-                         <p style="margin:-25px  0 0 30px; color:#7b7b7b"><%= current_user.email %></p><br/>
-                      <% else %>
-                      <% end %>   
+                        <% if current_user.email.present? %>
+                           <%= f.check_box :notification_for_email %>
+                           <label style="margin-top:10px;" for="checkbox1">&nbsp;</label>   
+                           <p style="margin:-25px  0 0 30px; color:#7b7b7b"><%= current_user.email %></p><br/>
+                        <% else %>
+                        <% end %>   
 
-                      <% if current_user.personal_email.present? %>   
-                         <%= f.check_box :notification_for_personal_email %>
-                         <p style="margin:-25px  0 0 30px; color:#7b7b7b"><%= current_user.personal_email %></p>
-                      <% else %>
-                      <% end %> 
+                        <% if current_user.personal_email.present? %>   
+                           <%= f.check_box :notification_for_personal_email %>
+                           <label style="margin-top:10px;" for="checkbox1">&nbsp;</label>   
+                           <p style="margin:-25px  0 0 30px; color:#7b7b7b"><%= current_user.personal_email %></p>
+                        <% else %>
+                        <% end %> 
 
-                     </div>
+                       </div>
 
                      </div>
 
@@ -102,5 +104,3 @@
   </div>              
   </div>
 </div>
-
-
