menu button added and active links added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <meta name = "viewport" content = "width = device-width">
 
 <title>Dinobo</title>
-<%= stylesheet_link_tag  'style', "components", "facebox.css", "stylesheet-image-based", media: 'all'%>
+<%= stylesheet_link_tag  'style', "components", "component","facebox.css", "stylesheet-image-based", media: 'all'%>
 <%= javascript_include_tag "application", "facebox.js" %>
 
  <%= csrf_meta_tags %> 
@@ -28,60 +28,108 @@
                
               <% end %>
             </div>
-                
+
             <div class="menu">
+              <a href="javascript:void(0);"><img src="/assets/logo.png" class="logo"></a>
+            
+              <nav id="cbp-hrmenu" class="cbp-hrmenu">
+                <ul>
+                  <li>
+                    <a href="#"></a>
+                    <div class="cbp-hrsub">
+                      <div class="main-new2">
+                        <ul>
+                            <% if user_signed_in? %>
+                              <% if controller.controller_name == 'posts' %>
+                                <li class="active">
+                                    <%= link_to "List your place", posts_overview_path %>
+                                </li>
+                              <%else%>
+                                <li>
+                                  <%= link_to "List your place", posts_overview_path %>
+                                </li>
+                              <%end%>
 
-                <a href="javascript:void(0);"><img src="/assets/logo.png" class="logo"></a>
+                              <% if controller.controller_name == 'bookings' %>
+                                <li class="active">
+                                    <%= link_to "My Booking", bookings_path,:class=>"active"  %>
+                                </li>
+                              <%else%>
+                                <li>
+                                  <%= link_to "My Booking", bookings_path %>
+                                </li>
+                              <%end%>
 
-                 <div class="dropdown">
-                     <a class="account"></a>
-                    
-                      <div class="submenu" style="display: none; ">
-                        
-                          
-                            <div class="main-new2">
-                                <ul>
-                                   <% if user_signed_in? %>
-                                    <li>
-                                        <%= link_to "List your place", posts_overview_path %>
-                                    </li>
-                                    <li>
-                                        <%= link_to "My Booking", bookings_path %>
-                                    </li>
+                              <% if controller.controller_name == 'order_receives' %>
+                              <li class="active">
+                                  <%= link_to "My Order/Received", order_receives_path %>
+                              </li>
+                              <%else%>
+                                <li>
+                                  <%= link_to "My Order/Received", order_receives_path %>
+                                </li>
+                              <%end%>
 
-                                    <li>
-                                        <%= link_to "My Order/Received", order_receives_path %>
-                                    </li>
+                              <% if controller.controller_name == 'messages' %>
+                              <li class="active">
+                               <%= link_to("Messages <span>#{current_user.check_message rescue nil}</span>".html_safe, {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post}) %> 
+                              </li>
+                              <%else%>
+                                <li>
+                                  <%= link_to("Messages <span>#{current_user.check_message rescue nil}</span>".html_safe, {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post}) %> 
+                                </li>
+                              <%end%>
+                              
+                              <% if controller.controller_name == 'users' %>
+                              <li class="active">
+                                <%= link_to "My Account", edit_user_path(current_user),:class=>"active" %>
+                              </li>
+                              <%else%>
+                                <li>
+                                  <%= link_to "My Account", edit_user_path(current_user) %>
+                                </li>
+                              <%end%>
 
-                                    <li>
-                                  
-                                     <%= link_to("Messages <span>#{current_user.check_message rescue nil}</span>".html_safe, {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post}) %> 
+                              <% if controller.controller_name == 'about_us' %>
+                              <li class="active">
+                                <%= link_to "About Us", {:controller=>"/about_us", :action=>"about"} %>
+                              </li>
+                              <%else%>
+                                <li>
+                                  <%= link_to "About Us", {:controller=>"/about_us", :action=>"about"} %>
+                                </li>
+                              <%end%>
 
-                                    </li>
-                                    
-                                    <li class="active">
-                                      <%= link_to "My Account", edit_user_path(current_user) %>
-                                    </li>
-                                    <li>
-                                      <%= link_to "About Us", {:controller=>"/about_us", :action=>"about"} %>
-                                    </li>
-                                   <li><a href="javascript:void(0);">Support</a></li>
-                                   <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
-                                   <% else %>
-                                     <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"} %></li>
-                                     <li><a href="javascript:void(0);">Support</a></li>
-                                  <% end %>
-                                </ul>
-                            </div>
+                              <li><a href="javascript:void(0);">Support</a></li>
 
+                              <% if controller.controller_name == 'users' %>
+                              <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+                              <%else%>
+                              <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+                              <%end%>
+                            <% else %>
+                             <% if controller.controller_name == 'about_us' %>
+                              <li class="active">
+                                <%= link_to "About Us", {:controller=>"/about_us", :action=>"about"} %>
+                              </li>
+                              <%else%>
+                                <li>
+                                  <%= link_to "About Us", {:controller=>"/about_us", :action=>"about"} %>
+                                </li>
+                              <%end%>
+                             <li><a href="javascript:void(0);">Support</a></li>     
+                            <% end %>
+                        </ul>
                       </div>
-                    
-                  </div>
+                    </div>
+                  </li>
+                </ul>
+              </nav>
             </div>
            
 
               <%= yield %>
-
+              
 
               <script type="text/javascript" >
               $(document).ready(function()
@@ -179,8 +227,12 @@
 
 
             </script>
-
-
+            <script src="/assets/cbpHorizontalMenu.min.js"></script>
+            <script>
+              $(function() {
+                cbpHorizontalMenu.init();
+              });
+            </script>
             <div id="animated_msg">
               <section class="animated alert">
                 <span class="close_x_bright">Close</span>
