issue resolved on page posts show, stripe button working

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -37,7 +37,7 @@
           </li>  
         </ul>
         <div class="status">
-          <%= f.select :status, options_for_select(%w[Active Inactive]) %>
+          <%#= f.select :status, options_for_select(%w[Active Inactive]) %>
             <select  class="status-prev">
                 <option value="10" style="color:#999;">Status</option>
                 <option value="9" style="color:#999;">Active</option>
