--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             </div>
 
             <div class="menu">
-              <a href="javascript:void(0);"><img src="/assets/logo.png" class="logo"></a>
+              <%= link_to image_tag("logo.png", :class=>"logo"),root_path%>
             
               <nav id="cbp-hrmenu" class="cbp-hrmenu">
                 <ul>
