--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -32,7 +32,8 @@
             </div>
                 
             <div class="menu">
-              <a href="javascript:void(0);"><img src="/assets/logo.png" class="logo"></a>
+              <%= link_to image_tag("logo.png", :class=>"logo"),root_path%>
+              <!-- <a href="javascript:void(0);"><img src="/assets/logo.png" class="logo"></a> -->
             
               <nav id="cbp-hrmenu" class="cbp-hrmenu">
                 <ul>
