--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -50,7 +50,7 @@
       </div>
     <% end %>
     <div class="booking-wrap">
-      <div class="new-add-post"><%= link_to 'Add Post', new_post_path %> </div>
+      <div class="new-add-post"><%= link_to '+Add Post', new_post_path %> </div>
       <% @posts.each_with_index do |post, index| %>
         <div class="booking-box-add">
           <div class="booking-col">       
