issue resolved for status dropdown on posts page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -38,11 +38,11 @@
         </ul>
         <div class="status">
           <%#= f.select :status, options_for_select(%w[Active Inactive]) %>
-            <select  class="status-prev">
-                <option value="10" style="color:#999;">Status</option>
-                <option value="9" style="color:#999;">Active</option>
-                <option value="9" style="color:#999;">Inactive</option>
-            </select>
+          <select name="search[status]" id="search_status" class="status-prev">
+            <option value="" style="color:#999;">Status</option>
+            <option value="Active" style="color:#999;">Active</option>
+            <option value="Inactive" style="color:#999;">Inactive</option>
+          </select>
         </div>
         <div class="search">
             <%= f.submit "",:class => "search-btn-new" %>
