--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,6 @@
   <div class="boxpop-up-login">
 
     <div class="heading-login mrleft75">Sign up</div>
-
-    <div><%= devise_error_messages! %></div>
     
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),:html => {:id => "user"}) do |f| %>
     <div class="login-popup"> 
@@ -38,7 +36,8 @@
          <p style="margin:-25px 0 0 44px; color:#7b7b7b; text-decoration: underline; font-family: brandon4;"> I agree term & condition</p>
     </div>
         
-        
+     
+
     <div style="text-align:center">
       <%= f.submit "Submit", :class=>"loginnew-btn" %>
     </div>
@@ -46,6 +45,10 @@
     <div style="text-align:center;"> OR </div>
     <div class="facebook-up-btn">
       <a href="/users/auth/facebook">Sign up with Facebook</a>
-
     </div>
+
+    <div class="bottom-div">
+      <div class="regErr"> <% unless resource.errors.empty? %> Error <% end %></div> <!-- <div style="float:left;margin: 0px 0 18px 132px"> Cancel</div> -->
+    </div>
+   
   </div>
