--- a/app/views/messages/compose_message.html.erb
+++ b/app/views/messages/compose_message.html.erb
@@ -112,7 +112,7 @@ font-family: brandon4;
       </div>
      
       <div class="paragraph-new">
-        <%= f.text_area :body ,:class => "pe_tf" ,:style => "width:338px; border: 2px solid #eee;" ,:rows => "10"%>
+        <%= f.text_area :body ,:class => "pe_tf" ,:style => "width:338px; border: 2px solid #eee font-family: brandon4;" ,:rows => "10"%>
       </div>
       <%= f.submit "Proceed",:class=>"booking-btn"%>
     <% end %>
