--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -26,7 +26,7 @@
                 <% end %>          
                 
          
-            <div class="help" style="margin-width: 268px;">sagar.kale@kunalinfotech.net </div>
+            <div class="help" style="margin-width: 268px;">help@dinobo.com </div>
              </div>
 
                </div>              
