--- a/app/views/bookings/search_by_date.html.erb
+++ b/app/views/bookings/search_by_date.html.erb
@@ -4,23 +4,23 @@
 <script type="text/javascript">
 
     jQuery(function($){
-      $("#start_date").datepicker({dateFormat: 'M d,yy',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
+      $("#start_date").datepicker({dateFormat: 'M d, yy ',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
 
     });
     jQuery(function($){
-      $("#end_date").datepicker({dateFormat: 'M d,yy',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
+      $("#end_date").datepicker({dateFormat: 'M d, yy ',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
     });
 </script>
 <div class="main-new">
             <ul class="verticle-menu">
-            <li><a href="#">Personal Information</a></li>
-            <li><a href="#">Change Password</a></li>
-            <li><a href="#">Bank Details</a></li>
-            <li><a href="#">My Post</a></li>
-            <li><a href="#">My Order/Received</a></li>
-            <li class="active"><%= link_to "My Booking", bookings_path%></a></li>
-            <li><a href="#">Payment</a></li>
-            <li><a href="#">Message</a></li>
+             <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
+              <li><%= link_to "Change Password", edit_user_registration_path %></li>
+              <li><%= link_to "Bank Details",bank_details_path %></li>
+              <li><%= link_to "My Post",posts_path%></li>
+              <li><%= link_to "My Order/Received",order_receives_path%></li>
+              <li class="active"><%= link_to "My Booking", bookings_path%></li>
+              <li><%= link_to "Payment", payments_path%></li>
+              <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil %></li>
             </ul>
           
 
